--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<form action="{% url 'reverse' %}">
 <h1>Vice Versa</h1>
 <textarea cols="50" rows="10" name="usertext" ></textarea>
 <p><input type="submit" value="Reverse" ></p>
+</form>
 </body>
 </html>
